<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02Var01</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="server">Server</string>
    <string name="server_port">Port</string>
    <string name="client">Client</string>
    <string name="temp">Temperatura</string>
    <string name="hum">Umiditate</string>
    <string name="all">Toate</string>

</resources>
